<?xml version="1.0"?>
<package format="2">
  <name>gym-battle</name>
  <version>0.0.1</version>
  <description>Create 3 control package using ROS 2 and Airtable</description>
  <maintainer email="shyakaadolf@gmail.com.com">Pascal</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
